# 251117_MathForPython

./: README.md  main.py  pyproject.toml
A01_Masteer_Math_By_Coding_in_Python/: A00_nameming.ipynb
A01_Masteer_Math_By_Coding_in_Python/B05_Algebara1/: A00_nameming.ipynb  C31_Soving_for_x.ipynb  C32_Solving_for_x_exercises.ipynb  C33_Expanding_terms.ipynb  C34_Creating_Matrices.ipynb  C35_Exercise_Create_multiplication_table.ipynb  C36_Associative_commutative_distributive.ipynb  C37_Creating_working_Python_lists.ipynb  C39_Greatest_common_denominator.ipynb  C41_Introduction_Python_dictionaries.ipynb  C42_Prime_factorization.ipynb  C43_Solving_inequalities.ipynb  C44_Adding_polynomials.ipynb  C47_Factoring_polynomials.ipynb
A01_Masteer_Math_By_Coding_in_Python/B06_Graping_Visualization/: C49_Plotting_coordinates_on_a_plane.ipynb  C50_Plotting_coordinates_on_a_plane_exercise.ipynb  C51_Graphing_lines_part_1_start_end_notation.ipynb  C52_Graphing_lines_part_2_slope-intercept_form.ipynb  C53_Graphing_rational_functions.ipynb  C54_Plotting_with_Sympy.ipynb  C57_Making_images_from_matrices.ipynb  C59_Drawing_patches_with_polygons.ipynb
A01_Masteer_Math_By_Coding_in_Python/B07_Algebra2/: C62_Summation_and_products.ipynb  C63_Differences_(discrete_derivative).ipynb  C64_Roots_of_polynomials.ipynb  C66_The_quadratic_equation.ipynb  C67_Complex_numbers_addition_and_subtraction.ipynb  C70_Graphing_complex_numbers.ipynb  C71_Revisiting_the_quadratic_equation_Complex.ipynb  C72_The_unit_circle.ipynb  C73_Natural_exponent_and_logarithm.ipynb  (+7 more)
(+121 files in other folders)
