[project]
name = "251017-mathforpython"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.0.1",
    "matplotlib>=3.10.7",
    "notebook>=7.4.7",
    "numpy>=2.3.4",
    "scipy>=1.16.2",
    "scipy-stubs==1.16.2.4",
    "sympy>=1.14.0",
    "jupyter>=1.1.1",
    "pandas>=2.3.3",
    "seaborn>=0.13.2",
]
